--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "task #1",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon --watch index.js",
+    "start:dev": "nodemon --watch",
     "test": "test"
   },
   "repository": {
