--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "index.js",
   "scripts": {
     "start:dev": "nodemon --watch",
-    "start": "node index.js  C1-C0 -i ./input/input.txt -o ./output/output.txt -o",
+    "start": "node index.js -c C1-C0  input.txt -o output.txt",
     "test": "test"
   },
   "repository": {
