--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "ciphering-cli-tool.js",
   "scripts": {
     "start:dev": "nodemon --watch",
-    "start": "node ciphering-cli-tool.js -c C1-C0-A -i input.txt -o output.txt",
+    "start": "`node ciphering-cli-tool.js -c C1-C0-A -i input.txt -o output.txt`",
     "test": "test"
   },
   "repository": {
