feat: add test for shiftPosition util function

--- a/package.json
+++ b/package.json
@@ -6,7 +6,7 @@
   "scripts": {
     "start:dev": "nodemon --watch",
     "start": "`node ciphering-cli-tool.js -c C1-C0-A -i input.txt -o output.txt`",
-    "test": "test"
+    "test": "jest"
   },
   "repository": {
     "type": "git",
